--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -116,7 +116,7 @@
                         </div>
 
                         <div class="name-profile-ctn">
-                            <img class="float" src="/img-com/client-1-min-white.png" />
+                            <img class="float" src="/img-com/profile-main.JPG" />
 
                         </div>
 
@@ -566,6 +566,35 @@
             </div>
         </div>
     </div>
+    <section class="spikes">
+        <div class="form-ctn">
+            <h3 class="contact-title">Contact</h3>
+            <form>
+                <div class="row">
+                    <div class="w-50">
+                        <input type="text" class="name" placeholder="Name" autocomplete="off" />
+                    </div>
+
+                    <div class="w-50">
+                        <input type="text" class="email" placeholder="name@example.com" autocomplete="off" />
+                    </div>
+
+                    <div class="w-100">
+                        <textarea cols="30" rows="10" class="message" placeholder="Message"></textarea>
+                    </div>
+
+                    <div class="w-100 item_center">
+                       <button class="contact-button" type="submit">Send Message</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <div class="mail-img">
+        <img src="img-com/mail (1).png" />
+    </div>
+
     <footer>
         <div class="waves">
             <div class="wave" id="wave1"></div>
