--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -271,7 +271,7 @@
         <div class="about-me-ctn">
             <div class="about-me gif-props" id="about-me1">
                 <div class="gif" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="img-com/profile-img-edited.png" />
+                    <img src="img-com/pngegg (2)-min.png" />
                 </div>
                 <div class="about-me-text">
                     <h1 class="about-me-title" data-aos="fade-up">About Me</h1>
@@ -592,17 +592,13 @@
             </form>
         </div>
         <div class="letter-img2">
-            <img src="img/pngegg (1).png" />
+            <img src="img-com/pngegg (1)-min.png" />
         </div>
     </section>
 
     <div class="mail-img">
         <img src="img-com/mail (1).png" />
     </div>
-
-    <!-- <div class="letter-img2">
-        <img src="img/pngegg (1).png" />
-    </div> -->
 
     <footer>
         <div class="waves">
