open in new tab

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -408,10 +408,10 @@
                                 Foundation Framework for emails
                             </div>
                             <div class="github-link">
-                                <a href="https://github.com/muhammadarif2113/apple-newsletter-email"><ion-icon
+                                <a href="https://github.com/muhammadarif2113/apple-newsletter-email" target="_blank"><ion-icon
                                         name="logo-github" id="github1"></ion-icon></a>
                             </div>
-                            <a href="/Apple Newsletter.html">
+                            <a href="/Apple Newsletter.html" target="_blank">
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </div>
@@ -435,10 +435,10 @@
                                 MJML
                             </div>
                             <div class="github-link">
-                                <a href="https://github.com/muhammadarif2113/transactional-email"><ion-icon
+                                <a href="https://github.com/muhammadarif2113/transactional-email" target="_blank"><ion-icon
                                         name="logo-github" id="github2"></ion-icon></a>
                             </div>
-                            <a href="https://muhammadarif2113.github.io/transactional-email/">
+                            <a href="https://muhammadarif2113.github.io/transactional-email/" target="_blank">
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </div>
@@ -460,10 +460,10 @@
                                 Photoshop
                             </div>
                             <div class="github-link">
-                                <a href="https://github.com/muhammadarif2113/airline-promo-email"><ion-icon
+                                <a href="https://github.com/muhammadarif2113/airline-promo-email" target="_blank"><ion-icon
                                         name="logo-github" id="github3"></ion-icon></a>
                             </div>
-                            <a href="https://muhammadarif2113.github.io/airline-promo-email/">
+                            <a href="https://muhammadarif2113.github.io/airline-promo-email/" target="_blank">
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </div>
@@ -485,10 +485,10 @@
                                 MJML
                             </div>
                             <div class="github-link">
-                                <a href="https://github.com/muhammadarif2113/nbastore-promo-email"><ion-icon
+                                <a href="https://github.com/muhammadarif2113/nbastore-promo-email" target="_blank"><ion-icon
                                         name="logo-github" id="github4"></ion-icon></a>
                             </div>
-                            <a href="https://muhammadarif2113.github.io/nbastore-promo-email/">
+                            <a href="https://muhammadarif2113.github.io/nbastore-promo-email/" target="_blank">
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </div>
@@ -522,7 +522,7 @@
                                     which simplified creating multiple templates to target subscribers
                                     on their purchasing journey. </p> -->
                             </div>
-                            <a class="arrow-link" href="/business-kit-v1.html">
+                            <a class="arrow-link" href="/business-kit-v1.html" target="_blank">
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </div>
@@ -558,7 +558,7 @@
                                     Framework for emails with the help of partials and JSON data
                                     which simplified creating multiple templates. </p> -->
                             </div>
-                            <a href="/business-kit-news.html">
+                            <a href="/business-kit-news.html" target="_blank">
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </div>
@@ -593,12 +593,12 @@
             </form>
         </div>
         <div class="letter-img2">
-            <img src="img-com/pngegg (1)-min.png" />
+            <img src="img-com/pngegg (1)-min.png" data-aos="fade-up-left"/>
         </div>
     </section>
 
     <div class="mail-img">
-        <img src="img-com/mail (1).png" />
+        <img src="img-com/mail (1).png" data-aos="fade-up-right"/>
     </div>
 
     <footer>
@@ -610,11 +610,11 @@
         </div>
         <ul class="social-icon">
             <li>
-                <a href="https://www.linkedin.com/in/muhammad-arif-2a9784163/"><ion-icon
+                <a href="https://www.linkedin.com/in/muhammad-arif-2a9784163/" target="_blank"><ion-icon
                         name="logo-linkedin"></ion-icon></a>
             </li>
             <li>
-                <a href="https://github.com/muhammadarif2113?tab=repositories"><ion-icon
+                <a href="https://github.com/muhammadarif2113?tab=repositories" target="_blank"><ion-icon
                         name="logo-github"></ion-icon></a>
             </li>
         </ul>
