--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,7 +104,7 @@
                         <div class="intro-ctn">
                             <p class="bio-desc1">Hello, I'm</p>
                             <p class="bio-desc2">M. Saim <span>Arif</span></p>
-                            <p class="bio-desc3">HTML Email Developer/Content Editor</p>
+                            <p class="bio-desc3">HTML Email Developer</p>
                             <a href="#projects">
                                 <button class="btn">
                                     <span class="btn-paint"></span>
