--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -518,7 +518,9 @@
                 Used liquid code to create personalized components like headers, heros, and collections for this fitness apparel brand. 
             </p>
 
-            <button style="font-size: 1rem; border-radius: 10px; padding: 10px 20px; background: #000000; color: #FFF;" data-aos="fade-up">LAUNCH PROJECT</button>
+            <a href="https://luxaryfreedom.myshopify.com" target="_blank" style="cursor: pointer;">
+                <button style="font-size: 1rem; border-radius: 10px; padding: 10px 20px; background: #000000; color: #FFF;" data-aos="fade-up">LAUNCH PROJECT</button>
+            </a>
         </div>
 
 
