--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -798,7 +798,7 @@
         </div>
     </section>
 
-    <footer style="background: #bdd8ed; border-top-left-radius: 100%; border-top-right-radius: 100%; height: 300px;">
+    <footer style="background: #244a8d; border-top-left-radius: 100%; border-top-right-radius: 100%; height: 300px;">
         <!-- <div class="waves">
             <div class="wave" id="wave1"></div>
             <div class="wave" id="wave2"></div>
