--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -500,12 +500,12 @@
 
             <div class="about-me" id="about-me2">
                 <h2 class="gif-h1 about-me-what" style="margin: 15px 0 5px 0;"> How I can help you. </h2>
-                <div class="email-ctn" style="display: flex; justify-content: space-evenly; align-items: center;">
+                <div class="email-ctn" style="display: flex; justify-content: space-evenly; align-items: center; margin-top: 30px;">
                     <div class="email-dev">
-                        <h3 style="color: #046a00; background-color: rgba(255, 255, 255, 0.641);">Email Development</h3>
-                        <ul style="font-size: 1.1rem; list-style: none; background-color: rgba(255, 255, 255, 0.641); font-family: 'Jost', sans-serif;
+                        <h3 style="margin: 0; color: #046a00; background-color: rgba(255, 255, 255, 0.641);">Email Development</h3>
+                        <ul style="padding: 0; margin: 5px; font-size: 1.1rem; list-style: none; background-color: rgba(255, 255, 255, 0.641); font-family: 'Jost', sans-serif;
                         ">
-                            <li style="margin: 2px 0;">Convert email designs to HTML</li>
+                            <li style="margin: 0 0 2px 0;">Convert email designs to HTML</li>
                             <li style="margin: 2px 0;">Test email and ensure deliverability</li>
                             <li style="margin: 2px 0;">Create responsive templates</li>
                             <li style="margin: 2px 0;">Create email campaigns and newsletters</li>
@@ -513,9 +513,9 @@
                     </div>
     
                     <div class="email-support">
-                        <h3 style="color: #046a00; background-color: rgba(255, 255, 255, 0.641);">Email Platform Support Setup</h3>
-                        <ul style="font-size: 1.1rem; list-style: none; background-color: rgba(255, 255, 255, 0.641); font-family: 'Jost', sans-serif;">
-                            <li style="margin: 2px 0;">Set up and manage Email Marketing account</li>
+                        <h3 style="margin: 0; color: #046a00; background-color: rgba(255, 255, 255, 0.641);">Email Platform Support Setup</h3>
+                        <ul style="margin: 5px; font-size: 1.1rem; list-style: none; background-color: rgba(255, 255, 255, 0.641); font-family: 'Jost', sans-serif;">
+                            <li style="margin: 0 0 2px 0;">Set up and manage Email Marketing account</li>
                             <li style="margin: 2px 0;">Set up and run email campaigns</li>
                             <li style="margin: 2px 0;">Build landing pages</li>
                             <li style="margin: 2px 0;">Set up automated messages</li>
@@ -526,8 +526,8 @@
                 </div>
                 <div class="ecom">
                     <h3 style="color: #046a00; background-color: rgba(255, 255, 255, 0.641);">E-commerce Store Setup</h3>
-                    <ul style="font-size: 1.1rem; list-style: none; background-color: rgba(255, 255, 255, 0.641); font-family: 'Jost', sans-serif;">
-                        <li style="margin: 2px 0;">Set up and manage Shopify store</li>
+                    <ul style="margin: 5px; font-size: 1.1rem; list-style: none; background-color: rgba(255, 255, 255, 0.641); font-family: 'Jost', sans-serif;">
+                        <li style="margin: 0 0 2px 0;">Set up and manage Shopify store</li>
                         <li style="margin: 2px 0;">Design pages and store layout</li>
                         <li style="margin: 2px 0;">Set up social media ads</li>
                         <li style="margin: 2px 0;">Manage product description and presentation</li>
