--- a/portfolio/suckerz-apple.html
+++ b/portfolio/suckerz-apple.html
@@ -356,9 +356,10 @@ h4 {
 </head>
 <nav>
     <ul style="display: flex; justify-content: center; list-style: none;">
-        <li style="padding: 20px;"> <a href="/suckerz-welcome.html">Template 1</a></li>
-        <li style="padding: 20px;"> <a href="/suckerz-lollipop.html">Template 2</a></li>
-        <li style="padding: 20px;"> <a href="/suckerz-apple.html">Template 3</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-welcome.html">Welcome Email</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-lollipop.html">Lollipop Email</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-apple.html">Apple Candy Email</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-tropical.html">Tropical Kit Email</a></li>
     </ul>
 </nav>
 <body style="word-spacing:normal;background-color:#f7f7f7;">
@@ -716,6 +717,18 @@ h4 {
 </table>
 </div>
 </div>
+
+<center>
+    <br><br><br><br><br>
+    <table align="center" style="text-align:center;background:#fafafa;width:100%;" width="100%">
+    <tbody><tr>
+        <td align="center" valign="top" style="color:#444;font-family:Helvetica,Arial,sans-serif;font-size:12px;line-height:110%;padding:20px 0;text-align:center;">
+            You received this email from Suckerz.<br>
+            If you would like to unsubscribe, <a class="unsubscribe-link" style="color:#197bbd;font-weight:normal;text-decoration:underline;" href="">click here</a>.
+        </td>
+    </tr>
+    </tbody></table>
+</center>
 
 <img src="./suckerz-apple_files/open" alt="" width="1" height="1" border="0" style="height:1px !important;width:1px !important;border-width:0 !important;margin-top:0 !important;margin-bottom:0 !important;margin-right:0 !important;margin-left:0 !important;padding-top:0 !important;padding-bottom:0 !important;padding-right:0 !important;padding-left:0 !important;">
 </body>
