--- a/portfolio/suckerz-lollipop.html
+++ b/portfolio/suckerz-lollipop.html
@@ -353,9 +353,10 @@ h4 {
 </head>
 <nav>
     <ul style="display: flex; justify-content: center; list-style: none;">
-        <li style="padding: 20px;"> <a href="/suckerz-welcome.html">Template 1</a></li>
-        <li style="padding: 20px;"> <a href="/suckerz-lollipop.html">Template 2</a></li>
-        <li style="padding: 20px;"> <a href="/suckerz-apple.html">Template 3</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-welcome.html">Welcome Email</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-lollipop.html">Lollipop Email</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-apple.html">Apple Candy Email</a></li>
+        <li style="padding: 20px;"> <a href="/suckerz-tropical.html">Tropical Kit Email</a></li>
     </ul>
 </nav>
 <body style="word-spacing:normal;background-color:#f7f7f7;">
@@ -712,7 +713,7 @@ h4 {
     <tbody><tr>
         <td align="center" valign="top" style="color:#444;font-family:Helvetica,Arial,sans-serif;font-size:12px;line-height:110%;padding:20px 0;text-align:center;">
             You received this email from Suckerz.<br>
-            If you would like to unsubscribe, <a class="unsubscribe-link" style="color:#197bbd;font-weight:normal;text-decoration:underline;" href="https://trk.klclick2.com/ls/click?upn=kYNlfMw73TbZrtiPqEjbrZsrR9pBziyAclfO6PHk2wK6HGNy9ptn3r9IoTkiLbz0X32KmM5mUDwsM0q3-2FCgudfvYX6pA7HKmPrYNAooim19njeh9otOcdzQx4oPqiJ9ZHfZ-2BEqbWfmfBsI0Y8HRCPBeaogBPnYcvrrC8mwjSOx7m9wgukoYdgueRuUrwxsEydzHVmHtu4xTQ8coiCpaQpjWt8f14VRnE0FFhwb-2Fx7cs-3DMuzv_qcaNllLtI8PqwFcuf01cjEFNbt52GSWZbD2xwpP6-2F3PZhEPY8jwYvDPDMogYzk-2BKS7jGqGnlL39HGxidX-2BEDSZ94ZnPa66TMwzvlLWW5X-2Fu2cVJCfF0WegB-2FqD-2B8pH-2BodyK-2BkF3xfXln-2BqlUJ2fCgBfwD6HW6z5suhWPMdtaSt-2FPvpJ0x5mVg6Sil378S8eFvqYHE4HSv4ckdGzFxOMBz0IE2FjbDzzsS7KSNRSNFwJaG7jxglDFY9Joy2r0Yb-2BS1-2Bg2y2-2FglmTYyHZ2y-2Bp9hNGFiFbqlMeDe7sQEgLx8zrqU8mRMfUReJ-2FEOs9r7j-2FJS1n-2F2bESnMz9TNbR8uiHYGqeRWiVREo2RQzZXkAuExE26hFsstd4atx-2Fg5HKjgaPEjUoJRBh1wv8Tw9BN6rioU9oMUnwfM1R0zP7NlV-2BN4g-3D">click here</a>.
+            If you would like to unsubscribe, <a class="unsubscribe-link" style="color:#197bbd;font-weight:normal;text-decoration:underline;" href="">click here</a>.
         </td>
     </tr>
     </tbody></table>
