img path updated

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -129,7 +129,7 @@
                         </div>
 
                         <div class="name-profile-ctn">
-                            <img class="float" src="/portfolio-2023/portfolio/img/Digital Marketer-3.png" />
+                            <img class="float" src="Digital Marketer-3.png" />
                         </div>
 
                     </div>
