presentation path updated

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -776,9 +776,9 @@
                                 Bunny's Flowers Search Campaign 
                             </div>
                             <div class="project-explain">
-                                Client deliverable showing the end results of Google Ads Search campaign for non-profit Bunny's Flower. 
+                                Client deliverable showing the results of Google Ads Search campaign for non-profit Bunny's Flower. 
                             </div>
-                            <a href="/portfolio-2023/portfolio/Bunny's Flowers - Final Presentation.pdf" target="_blank">
+                            <a href="Bunny's Flowers - Final Presentation.pdf" target="_blank">
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </a>
                         </div>
